Add JSX conditionals by returning object

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,9 @@ li {
 }
 
 li:nth-child(even) {
-  color: aquamarine;
+  background-color: turquoise;
 }
 
 li:nth-child(odd) {
-  color: yellowgreen;
+  background-color: yellowgreen;
 }
